# freelance-project-finder-agent

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: collector_agent.py  coordinator.py  filter_agent.py  proposal_agent.py  ranking_agent.py
app/collectors/: base.py  filters.py  manager.py  mock_collector.py  opportunity_type.py  remoteok.py  remotive.py  weworkremotely.py
app/database/: models.py  session.py
app/proposal/: generator.py  ollama_client.py
app/ranking/: scorer.py
dashboard/: app.py  helpers.py
scripts/: deploy.sh  rescore_projects.py  run.sh  setup.sh
tests/: test_api.py  test_collectors.py  test_dashboard.py  test_filters.py  test_generator.py  test_opportunity_type.py  test_proposal_fallback.py  test_scorer.py
