[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freelance-project-finder-agent"
version = "0.8.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.0",
    "uvicorn>=0.50.2",
]

# Note: pip's editable installs expect setuptools package discovery configuration.
# This project contains the 'app' package (app/__init__.py) which must be discoverable.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "dashboard*"]

[project.optional-dependencies]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
